--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-ractive": "^0.7.1",
     "gulp-rename": "^1.2.2",
     "gulp-rollup": "^2.5.0",
