adding new dependency

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "gulp-wrap": "^0.13.0"
   },
   "dependencies": {
-    "ractive": "^0.7.3",
-    "ux-checkbox": "git+https://github.com/ustop/ux-checkbox.git#master"
+    "ractive": "^0.8.0",
+    "ux-checkbox": "git+https://github.com/ustop/ux-checkbox.git#master",
+    "rollup-plugin-ractive-template": "https://github.com/ustop/rollup-plugin-ractive-template.git"
   }
 }
